[tool.poetry]
name = "server"
version = "0.1.0"
description = "backend for personal budgeting app"
authors = ["Justaway <kritarthasapkota999@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.92.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
